Hover state for selectables

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,5 +11,7 @@ body {
 .selectable {
     cursor: pointer;
     &:hover {
+        color: darken(@color2, 5%);
+        background: lighten(@color2, 10%);
     }
 }
