--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,3 +15,13 @@ body {
         background: lighten(@color2, 10%);
     }
 }
+
+.searchResult {
+    max-height: 230px;
+    &-image {
+        width: 100%;
+        max-width: 100%;
+        max-height: 120px;
+        object-fit: cover;
+    }
+}
