--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -65,6 +65,12 @@ body {
     }
 }
 
-.playlist-item {
-    border-bottom: solid 1px darken($color2, 10%);
+.playlist {
+    &-title {
+        background-color: darken($color1, 15%);
+    }
+
+    &-item {
+        border-bottom: solid 1px darken($color2, 10%);
+    }
 }
