--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,16 @@ $color3: #BFB7B2;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
 
+@mixin radialGradient($from, $to) {
+    background: -moz-radial-gradient(center, circle cover, $from 0%, $to 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, $from), color-stop(100%, $to));
+    background: -webkit-radial-gradient(center, circle cover, $from 0%, $to 100%);
+    background: -o-radial-gradient(center, circle cover, $from 0%, $to 100%);
+    background: -ms-radial-gradient(center, circle cover, $from 0%, $to 100%);
+    background: radial-gradient(center, circle cover, $from 0%, $to 100%);
+    background-color: $from;
+}
+
 html {
     height: 100%;
 }
@@ -39,7 +49,8 @@ body {
 }
 
 .main {
-    background-color: $color2;
+    background-color: rgba($color2, 0.1);
+    color: darken($color1, 10%);
 }
 
 .selectable {
@@ -62,6 +73,11 @@ body {
         max-width: 100%;
         max-height: 120px;
         object-fit: cover;
+    }
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba($color2, 0.2);
     }
 }
 
